NULL = 

SUBDIRS = reference

man_MANS = \
	baul.1 \
	baul-autorun-software.1 \
	baul-connect-server.1 \
	baul-file-management-properties.1 \
	$(NULL)

EXTRA_DIST = \
	$(man_MANS) \
	architecture.txt \
	dnd.txt \
	load-states.dia \
	baul-internals.sxw \
	baul-internals.pdf \
	baul-io.txt \
	baul.faq \
	recommended-books.html \
	smoketests.html \
	state-machines.txt \
	style-guide.html \
	key_mouse_navigation.txt \
	$(NULL)

-include $(top_srcdir)/git.mk
